Modified "Select Municipality" and "Select Company" fields so that they are only displayed for multiple municipalities/companies. Made stylistic tweaks to create uniformity across pages (especially mobile). Files modified - [ManageForms.html,Main.html,CompanyForms.html,ManageGISData.variables.json,ManualFeeTypes.html,MyMunicipality.html,MunicipalityUsers.variables.json,CompanyProfile.html,MyCompany.html,ManageGISData.html,ManualFeeTypes.variables.json,ManageSubscriptions.variables.json,ProcessForms.html,CompanyMunicipalities.variables.json,ManageMunicipalityVendors.variables.json,CXGlobalSettings.html,ViewProject.variables.json,CompanyProfile.variables.json,WorkSchedule.html,ManageMunicipalityVendors.html,MunicipalitySettings.html,MunicipalitySettings.variables.json,MunicipalityUsers.html,EditForm.html,CompanyMunicipalities.html,ManageUsers.variables.json,MunicipalityAdministration.html,CompanyUsers.variables.json,CompanyUsers.html]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -12,8 +12,8 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                        <wm-liveform novalidate="false" errormessage="" title="Global Settings" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.Cx2GlobalSettingsData.dataSet" captionalign="left" captionposition="top" name="liveform2" formdata="bind:Variables.DefaultData.firstRecord"
-                        class="panel-primary">
+                        <wm-liveform novalidate="false" errormessage="" title="Global Settings" iconclass="wi wi-settings" defaultmode="Edit" dataset="bind:Variables.Cx2GlobalSettingsData.dataSet" captionalign="left" captionposition="top" name="liveform2"
+                        formdata="bind:Variables.DefaultData.firstRecord" class="panel-primary">
                             <wm-layoutgrid columns="1" name="layoutgrid3">
                                 <wm-gridrow name="gridrow13">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn13">
