--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -12,8 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="label2_1" caption="bind:'Edit Form: ' + Variables.CurrentFormObj.dataSet.data[$i].formType + ' (' + Variables.CurrentFormObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold"
-                        fontsize="15"></wm-label>
+                        <wm-label name="label2_1" caption="bind:'Edit Form: ' + Variables.CurrentFormObj.dataSet.data[$i].formType + ' (' + Variables.CurrentFormObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow26_1">
