--- a/src/main/webapp/pages/MyCompany/MyCompany.html
+++ b/src/main/webapp/pages/MyCompany/MyCompany.html
@@ -10,7 +10,7 @@
                         <wm-label name="label1" caption="My Company Dashboard" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn16_1" padding="2em unset">
-                        <wm-composite name="composite1">
+                        <wm-composite name="composite1" show="bind:Variables.AdminVendorsList.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label9" caption="Select Company" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
                                 <wm-select name="selectSelectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" datavalue="bind:Variables.AdminVendorsList.firstRecord" orderby="CompanyName:asc"></wm-select>
