--- a/src/main/webapp/pages/WorkSchedule/WorkSchedule.html
+++ b/src/main/webapp/pages/WorkSchedule/WorkSchedule.html
@@ -12,10 +12,10 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" caption="Municipality Administration" fontweight="bold" fontsize="15" name="label1"></wm-label>
+                        <wm-label caption="Schedule Management" fontweight="bold" name="label1" class="h4"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="2em unset">
-                        <wm-composite name="composite1">
+                        <wm-composite name="composite1" show="bind:Variables.AdminsMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
                                 <wm-select name="selectMunicipality" dataset="bind:Variables.AdminsMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.AdminsMunicipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-panel iconclass="wi wi-schedule" name="panel1" title="Work Schedule" class="panel-primary">
+                        <wm-panel iconclass="wi wi-schedule" name="panel1" title="Operating Hours" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow4_1" padding="1em unset">
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn5">
@@ -66,13 +66,13 @@
                                         </wm-composite>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow6" padding="2em unset 1em unset">
+                                <wm-gridrow name="gridrow6" padding="3em unset 1em unset">
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn17"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn18">
                                         <wm-composite name="composite14">
-                                            <wm-label class="col-md-3 control-label" name="label8" caption="Open Time"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label8" caption="Opening Time" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container6" horizontalalign="center">
-                                                <wm-time name="timeOpenTime" timepattern="hh:mm:ss" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.openTime"></wm-time>
+                                                <wm-time name="timeOpenTime" timepattern="hh:mm a" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.openTime"></wm-time>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -82,9 +82,9 @@
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn20"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn21">
                                         <wm-composite name="composite15">
-                                            <wm-label class="col-md-3 control-label" name="label9" caption="Close Time"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label9" caption="Closing Time" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container7" horizontalalign="center">
-                                                <wm-time name="timeCloseTime" timepattern="hh:mm:ss" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.closeTime"></wm-time>
+                                                <wm-time name="timeCloseTime" timepattern="hh:mm a" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.closeTime"></wm-time>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -94,15 +94,15 @@
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn23"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn24">
                                         <wm-composite name="composite12">
-                                            <wm-label class="col-md-3 control-label" name="label6" caption="Time Zone"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Time Zone" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container4">
-                                                <wm-select name="selectTimezone" dataset="Eastern,Central,Mountain,Pacific" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.timeZone"></wm-select>
+                                                <wm-select name="selectTimezone" dataset="Eastern,Central,Mountain,Pacific" datavalue="bind:Variables.SelectedMunicipalityObj.firstRecord.timeZone" width="168px"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn25"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow9" padding="2em unset">
+                                <wm-gridrow name="gridrow9" padding="3em unset 1em unset">
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn22_1" horizontalalign="center">
                                         <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdate" on-click="Variables.UpdateWorkMunicipality.invoke()" iconclass="wi wi-update"></wm-button>
@@ -115,14 +115,13 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn24_1">
-                        <wm-panel iconclass="wi wi-today" name="panel2" title="Manage Holidays" class="panel-primary">
+                        <wm-panel iconclass="wi wi-today" name="panel2" title="Work Holidays" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2HolidaysData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
                                     <wm-grid-column binding="holiday" caption="Holiday" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="date" caption="Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-action key="addNewRow" display-name="Add Holiday" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Holiday" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
@@ -130,18 +129,20 @@
                                     <wm-layoutgrid columns="1" name="layoutgrid3">
                                         <wm-gridrow name="gridrow11">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn25_1">
-                                                <wm-form-field name="holiday" displayname="Holiday" show="true" primary-key="false" generator="assigned" key="holiday" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter Holiday Name"></wm-form-field>
+                                                <wm-form-field name="holiday" displayname="Holiday" show="true" primary-key="false" generator="assigned" key="holiday" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter Holiday Name"
+                                                required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow12">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn26">
-                                                <wm-form-field name="date" displayname="Date" show="true" primary-key="false" generator="assigned" key="date" type="date" widget="date" placeholder="Select date"></wm-form-field>
+                                                <wm-form-field name="date" displayname="Date" show="true" primary-key="false" generator="assigned" key="date" type="date" widget="date" placeholder="Select date" datepattern="MM-dd-yyyy" required="true"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" dataset="bind:Variables.SelectedMunicipalityObj.dataSet" datafield="All Fields"
-                                    displayfield="municipalityName" defaultvalue="bind:Variables.SelectedMunicipalityObj.firstRecord" placeholder="Select value"></wm-form-field>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                                    <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" dataset="bind:Variables.SelectedMunicipalityObj.dataSet"
+                                    datafield="All Fields" displayfield="municipalityName" defaultvalue="bind:Variables.SelectedMunicipalityObj.firstRecord" placeholder="Select value"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
+                                    placeholder=""></wm-form-field>
                                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                 </wm-liveform>
