Updated CX logo sizes, spacing. Other minor tweaks. Files modified - [footer.html,header.html,Login.html,ForgotPassword.html,ResetPassword.html]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -2,9 +2,9 @@
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow1" padding="2em unset">
+                <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn2" horizontalalign="center">
-                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="200px" height="102px"></wm-picture>
+                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="140px" height="71px" margin="2em unset"></wm-picture>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5">
@@ -17,12 +17,12 @@
                                         <wm-label padding="unset 0.5em" name="label2" caption="Forgot your password? It happens! Provide your email address below and we will send you a link to set a new password so that you can get back into your account."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow7">
+                                <wm-gridrow name="gridrow7" padding="unset 0.5em">
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn19">
-                                        <wm-text name="Email" type="email" required="true" placeholder="Enter your Username (Email Address)"></wm-text>
+                                        <wm-text name="Email" type="email" required="true" placeholder="Enter your Username (Email Address)" margin="0.5em 0.5em 0.5em unset"></wm-text>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn20">
-                                        <wm-button class="btn-primary" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()" iconclass="wi wi-update"></wm-button>
+                                        <wm-button class="btn-primary" caption="Reset Password" type="button" margin="0.5em unset" name="button1" on-click="Variables.getUserID.invoke()" iconclass="wi wi-update"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow8" padding="2em unset">
