--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -2,9 +2,9 @@
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow3" padding="2em unset">
+                <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8" horizontalalign="center">
-                        <wm-picture name="picture1" picturesource="resources/images/logos/CX-Logo.png" class="cx-logo" width="200px" height="102px"></wm-picture>
+                        <wm-picture name="picture1" picturesource="resources/images/logos/CX-Logo.png" class="cx-logo" width="140px" height="71px" margin="2em unset"></wm-picture>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
