--- a/src/main/webapp/pages/header/header.html
+++ b/src/main/webapp/pages/header/header.html
@@ -1,9 +1,9 @@
 <wm-partial data-ng-controller="headerPageController" name="header" type="header">
     <wm-layoutgrid name="headerlayout">
         <wm-gridrow name="headerrow">
-            <wm-gridcolumn name="headerleft" verticalalign="middle" columnwidth="7" padding="5px unset unset unset">
-                <wm-picture picturesource="resources/images/imagelists/CX-Logo.png" name="AppLogo" pictureaspect="None" width="100px" height="51px"></wm-picture>
-                <wm-label caption="CivicXpress" name="AppName" fontsize="30" fontweight="bold" color="#2d2b3e"></wm-label>
+            <wm-gridcolumn name="headerleft" verticalalign="middle" columnwidth="7">
+                <wm-picture picturesource="resources/images/imagelists/CX-Logo.png" name="AppLogo" pictureaspect="None" width="63px" height="32px" margin="0.5em 0.5em unset unset"></wm-picture>
+                <wm-label caption="CivicXpress" name="AppName" fontsize="22" fontweight="bold" color="#2d2b3e"></wm-label>
             </wm-gridcolumn>
             <wm-gridcolumn name="headerright" horizontalalign="right" verticalalign="middle" columnwidth="5" padding="1em 1em unset unset"></wm-gridcolumn>
         </wm-gridrow>
